# api-rate-limiting-assesment

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
.cargo/: config.toml
db/: init.sql
db/migrations/2024-01-01-000001_create_transaction_queue/: down.sql  up.sql
libs/postgres_models/: Cargo.toml
libs/postgres_models/src/: lib.rs  schema.rs
libs/postgres_models/src/models/: mod.rs  rate_limits.rs  transaction_queue.rs
libs/redis_cache/: Cargo.toml
libs/redis_cache/src/: lib.rs
services/api/: Cargo.toml
services/api/src/: config.rs  errors.rs  lib.rs  main.rs
services/api/src/extractors/: database.rs  mod.rs
services/api/src/v1/: mod.rs
services/api/src/v1/transactions/: mod.rs  submit.rs
services/api/tests/: edge_cases_test.rs  integration_test.rs  load_test.rs  queue_management_test.rs  rate_limiting_test.rs
services/api/tests/common/: mod.rs
