[workspace]
members = [
    "libs/postgres_models",
    "libs/redis_cache",
    "services/api",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Squads Engineering"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Database
diesel = { version = "2.2", features = ["postgres", "chrono", "uuid", "serde_json"] }
diesel-async = { version = "0.5.2", features = ["postgres", "bb8"] }
bb8 = "0.8"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.18"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
url = "2.5"

# Testing
reqwest = { version = "0.12", features = ["json"] }