[package]
name = "postgres_models"
version.workspace = true
edition.workspace = true

[dependencies]
diesel = { workspace = true }
diesel-async = { workspace = true }
bb8 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }