[package]
name = "redis_cache"
version.workspace = true
edition.workspace = true

[dependencies]
redis = { workspace = true }
deadpool-redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }